Fix jump to message, rename button to jump-to-bottom-button

--- a/scss/message/_message-list.scss
+++ b/scss/message/_message-list.scss
@@ -32,7 +32,7 @@
       text-align: center;
     }
 
-    .jump-to-first-unread-message-button {
+    .jump-to-bottom-button {
       position: relative;
       z-index: 8;
       
